Rename all nses for the new project name. Address primary lint issues. Remove CLJS support.